--- a/index.html
+++ b/index.html
@@ -1409,26 +1409,42 @@ display: none;
 
     <!-- Gallery starts -->
 
-    <section id="project-sec" style="width: 80%; margin: 0 auto">
-      <div class="sliderbg">
-        <div class="container containersliderbg">
-          <div class="carousel" id="carousel">
-            <div class="carousel__wrapper" id="carouselWrapper">
-              <div class="item"><img src="assets/gal1.png" alt="" /></div>
-              <div class="item"><img src="assets/gal2.png" alt="" /></div>
-              <div class="item"><img src="assets/gal3.png" alt="" /></div>
-              <div class="item"><img src="assets/gal4.png" alt="" /></div>
-              <div class="item"><img src="assets/gal5.png" alt="" /></div>
-              <div class="item"><img src="assets/gal6.png" alt="" /></div>
-              <div class="item"><img src="assets/gal8.png" alt="" /></div>
-            </div>
-          </div>
-          <!-- Prev and Next buttons -->
-          <button id="prevBtn" class="nav-button">&#8592;</button>
-          <button id="nextBtn" class="nav-button">&#8594;</button>
-        </div>
-      </div>
-    </section>
+        <!-- Card start -->
+
+<div class="scroll-wrapper left-to-right" style="margin-bottom: 100px; margin-top: 100px;">
+  <div class="scroll-track track-right card-track">
+    <!-- Cards for left to right -->
+    <div class="card"> <img src="/assets/gal1.png" alt="img1" /></div>
+    <div class="card"> <img src="/assets/gal2.png" alt="img2" /></div>
+    <div class="card"> <img src="/assets/gal3.png" alt="img3" /></div>
+    <div class="card"> <img src="/assets/gal4.png" alt="img4" /></div>
+    <div class="card"> <img src="/assets/gal5.png" alt="img5" /></div>
+  </div>
+</div>
+
+<div class="scroll-wrapper right-to-left mt-5" style="margin-bottom: 100px;">
+  <div class="scroll-track track-left card-track">
+    <!-- Cards for right to left -->
+    <div class="card"> <img src="/assets/gal6.png" alt="img6" /></div>
+    <div class="card"> <img src="/assets/gal8.png" alt="img7" /></div>
+    <div class="card"> <img src="/assets/silambam.jpg" alt="img8" /></div>
+    <div class="card"> <img src="/assets/westerndance.jpg" alt="img9" /></div>
+    <div class="card"><img src="/assets/yoga.jpg" alt="img10" /></div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Card end -->
 
     <!-- Gallery Ends -->
   <!-- newsletter -->
