update in gallery section

--- a/index.html
+++ b/index.html
@@ -1425,11 +1425,11 @@ display: none;
 <div class="scroll-wrapper right-to-left mt-5" style="margin-bottom: 100px;">
   <div class="scroll-track track-left card-track">
     <!-- Cards for right to left -->
-    <div class="card"> <img src="/assets/gal6.png" alt="img6" /></div>
     <div class="card"> <img src="/assets/gal8.png" alt="img7" /></div>
+    <div class="card"><img src="/assets/yoga.jpg" alt="img10" /></div>
     <div class="card"> <img src="/assets/silambam.jpg" alt="img8" /></div>
     <div class="card"> <img src="/assets/westerndance.jpg" alt="img9" /></div>
-    <div class="card"><img src="/assets/yoga.jpg" alt="img10" /></div>
+    <div class="card"> <img src="/assets/skating.jpg" alt="img6" /></div>
   </div>
 </div>
 
